<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_notify"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_setting" />

</menu>
