<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aseanfan.worldcafe.UI.CreateEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/genre" />


        <RadioGroup
            android:id="@+id/radgroup"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content" >


                <RadioButton
                    android:id="@+id/radfriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="friend" />

                <RadioButton
                    android:id="@+id/radlanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="language" />



                <RadioButton
                    android:id="@+id/radlocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="local" />

                <RadioButton
                    android:id="@+id/radbusiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="business" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/selectimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/choosearea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/area"  />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/area_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/timepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/schedule" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/price"  />

        <EditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:text="@string/numberofparticipants"  />
        <EditText
            android:id="@+id/input_numbetofpartiicipants"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:layout_height="wrap_content"
            android:text="@string/title"  />
        <EditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:layout_height="wrap_content"
            android:text="@string/detail"  />
        <EditText
            android:id="@+id/input_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:background="@drawable/background_button_gray"
            android:layout_height="wrap_content"
            android:text="@string/note"  />
        <EditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />


        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Create_event" />


    </LinearLayout>
</ScrollView>
