<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom">



    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:id="@+id/content_login"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/Signupwithfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/Facebook_Signup"
            android:textColor="@color/white"
            android:drawableLeft= "@drawable/ic_fb"
            android:paddingLeft="20dp"
            android:background="@drawable/background_button_facebook" />

        <Button
            android:id="@+id/Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="130dp"
            android:text="@string/Signup"
            android:textColor="@color/colorPrimary"
            android:drawableLeft= "@drawable/ic_signup"
            android:paddingLeft="20dp"
            android:background="@drawable/button_white"
            />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:background="@drawable/button_transparent" />
    </LinearLayout>

</FrameLayout>
